profilelist1exp/unpackaged/objects/ST_Product__c.object
<CustomObject>
    <fields>
        <fullName>Product_Alias__c</fullName>
        <label>Product_Alias</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Categorization_Tier_1__c</fullName>
        <label>Product_Categorization_Tier_1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Categorization_Tier_2__c</fullName>
        <label>Product_Categorization_Tier_2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Categorization_Tier_3__c</fullName>
        <label>Product_Categorization_Tier_3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product_Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_selection__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <label>Request_selection</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_PDA__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <label>Status_PDA</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_PDC__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <label>Status_PDC</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>ST_Product</label>
    <nameField>
        <label>ST_Product_Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ST_Product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>